# finance-valuation

./: .gitignore  README.md  config.py  pyproject.toml
data/: ambev_balance_sheet.csv  ambev_income_statement.csv
finance-simple-valuation/: .gitignore  README.md  app.py  config.py  pyproject.toml  run.py
finance-simple-valuation/data/: README.md  ambev_cash_flow.csv
finance-simple-valuation/src/finance/: checks.py  dcf.py  metrics.py  projections.py  sensitivity.py
finance-simple-valuation/src/io/: validators.py
finance-simple-valuation/src/pipeline/: orchestrator.py
finance-simple-valuation/src/reporting/: export.py  plots.py
finance-simple-valuation/tests/: test_dcf.py  test_finance.py
outputs/: ebit_to_fcf_bridge.csv  ev_composition.csv  ev_vs_terminal_g.csv  ev_vs_wacc.csv  fcf_projection.csv  projections.csv  run_log.txt  sensitivity_ev.csv  summary.json
src/finance/: projections.py  scenarios.py
src/io/: loaders.py  validators.py
src/reporting/: export.py  plots.py
tests/: test_dcf.py
